--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,21 @@
-.App {
+body {
+  --mainBgColour: snow;
+  --primaryFont: 'Poppins', sans-serif;
+  --defaultFont: 400;
+  --boldFont: 800;
+
+}
+
+body {
+  background-color: var(--mainBgColour);
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+header {
+  font-family: var(--primaryFont);
+  font-weight: var(--boldFont);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+footer {
+  
 }
